@@ -1161,3 +1161,4 @@ https://www.koreatimes.co.kr/entertainment/films/20250721/will-fantasy-epic-omni
 https://www.koreatimes.co.kr/entertainment/k-pop/20250721/txt-gets-personal-more-powerful-on-new-album-the-star-chapter-together?utm_source=rss
 https://en.yna.co.kr/view/AEN20250721007000315
 https://www.koreatimes.co.kr/entertainment/shows-dramas/20250721/yum-jung-ah-plays-devilish-adoption-trafficking-kingpin-in-korean-drama-the-defects?utm_source=rss
+https://phoenixtalkspopculturejapan.wordpress.com/2025/07/21/suspicious-partner-jpn-version-watch-the-original-instead/
